--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "deploy": "gh-pages -d src",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
@@ -33,6 +34,7 @@
     "babelify": "^8.0.0",
     "browserify": "^16.2.2",
     "chalk": "^2.4.1",
+    "gh-pages": "^2.1.1",
     "gulp": "^3.9.1",
     "gulp-uglify": "^3.0.0",
     "tinyify": "^2.4.3",
